# mpi_tests

./: .gitignore
create_intercomms/: CMakeLists.txt  README.md  coupler.c  coupler.h  coupler_main.c  model.c
fortran_mpi/: CMakeLists.txt  c_init_mpi.c  iris.c  iris.f90  iris.h  iris.mod  main.f90
hello_world/: Makefile  main.c
mpi_mt/: Makefile  main.c
ring/: main.c
scatterV_gatherV/: README.md  coupler.c  coupler_main.c  model.c
scatter_gather/: Makefile  main.c
